Still working on testing and formating date for adding logs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"body-parser": "^1.15.2",
 		"cors": "^2.8.1",
 		"express": "^5.0.0-alpha.2",
+		"moment": "^2.23.0",
 		"mongodb": "^2.2.5",
 		"mongoose": "^5.3.14",
 		"shortid": "^2.2.14"
